BE-challenge: Add endpoints and tests (#2)
* Add readme file

* BE-challenge: Add endpoints

* basic test setup debugging results

* BE-challenge: Implement tests

* BE-challenge: Implement CR comments

* be-challenge: Prettier format
